--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,16 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><%= image_tag "pinte.png" %></a>
+      <a class="navbar-brand" href="/">
+        <%= image_tag "pinte.png" %>
+      </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav hidden-md hidden-lg">
-        <li><a><big>Consulter ton trigramme © BôBar</big></a></li>
+        <li><a><big>Consulte ton trigramme © BôBar</big></a></li>
       </ul>
       <ul class="nav navbar-nav visible-md visible-lg">
-        <li><a><big>Consulter ton trigramme © BôBar, Manou, Gengen, Frankiz</big></a></li>
+        <li><a><big>Consulte ton trigramme © BôBar, Manou, Gengen, Frankiz</big></a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
